# ai-time

./: Cargo.toml  README.md
.github/workflows/: build.yaml  github-release.yaml  powerset.yaml
time/: Cargo.toml
time-core/: Cargo.toml
time-core/src/: util.rs
time-macros/: Cargo.toml
time-macros/src/: date.rs  datetime.rs  error.rs  lib.rs  offset.rs  serde_format_description.rs  time.rs  to_tokens.rs  utc_datetime.rs
time-macros/src/format_description/: ast.rs  format_item.rs
time-macros/src/format_description/public/: modifier.rs
time-macros/src/helpers/: mod.rs  string.rs
time/benchmarks/: date.rs  duration.rs  formatting.rs  instant.rs  month.rs  offset_date_time.rs  parsing.rs  primitive_date_time.rs  rand08.rs  rand09.rs  time.rs  utc_date_time.rs  utc_offset.rs  util.rs  weekday.rs
time/src/: date.rs  duration.rs  instant.rs  lib.rs  macros.rs  month.rs  offset_date_time.rs  primitive_date_time.rs  quickcheck.rs  time.rs  utc_date_time.rs  utc_offset.rs  util.rs  weekday.rs
time/src/error/: format.rs  mod.rs
time/src/ext/: instant.rs  numerical_duration.rs  numerical_std_duration.rs  systemtime.rs
time/src/formatting/: formattable.rs  iso8601.rs  mod.rs
time/src/serde/: mod.rs
time/tests/integration/: convert.rs  date.rs  derives.rs  duration.rs  error.rs  ext.rs  format_description.rs  formatting.rs  instant.rs  macros.rs  meta.rs  month.rs  offset_date_time.rs  parse_format_description.rs  parsed.rs  parsing.rs  primitive_date_time.rs  quickcheck.rs  rand.rs  serde_helpers.rs  time.rs  utc_date_time.rs  utc_offset.rs  util.rs  (+1 more)
(+21 files in other folders)
