lints.workspace = true

[package]
name = "ai-time-core"
version = "0.1.8"
categories = ["date-and-time"]
description = "A no_std fork of time-core"

authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[features]
large-dates = []
